--- a/EmployeeProject/Views/Accounts/Login.cshtml
+++ b/EmployeeProject/Views/Accounts/Login.cshtml
@@ -28,7 +28,7 @@
         <button type="submit" class="btn btn-primary w-100">Login</button>
 
         <div class="text-center mt-3">
-            <a href="/Company/ForgotPassword">Forgot Password?</a> |
+            <a href="/Accounts/ForgotPassword">Forgot Password?</a> |
             <a href="/Company/Index">Not registered? Register now</a>
         </div>
     </form>
