--- a/EmployeeProject/Views/Company/Dashboard.cshtml
+++ b/EmployeeProject/Views/Company/Dashboard.cshtml
@@ -1,6 +1,7 @@
 ﻿@model EmployeeProject.Data.CompanyModel
 @{
     ViewData["Title"] = "Company Dashboard";
+    // Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!-- Font Awesome & Bootstrap -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
