--- a/EmployeeProject/Views/Company/Index.cshtml
+++ b/EmployeeProject/Views/Company/Index.cshtml
@@ -1,4 +1,8 @@
 ﻿@model EmployeeProject.Data.CompanyModel
+@{
+    // ViewData["Title"] = "Welcome";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
